change name of output directory from OUTPUT/ to build/

--- a/examples/hello/Makefile
+++ b/examples/hello/Makefile
@@ -1,7 +1,7 @@
 include ysr.mk
 
 ## example 1: how to build a shared library
-printerlib_impl_OBJS=$(DEST)/src/printerlib.o
+printerlib_impl_OBJS=$(DEST)/hello/src/printerlib.o
 printerlib_impl_LIBNAME=printer
 $(call mk-c-sharedlib-rule,printerlib_impl)
 
@@ -13,7 +13,7 @@ printerlib_LIBSPATH=$(printerlib_impl_LIBDIR)
 printerlib_DEPS=$(printerlib_impl_LIB)
 
 ## example 3: a program with dependency on a shared library
-helloworld_OBJS=$(DEST)/src/printer.o
+helloworld_OBJS=$(DEST)/hello/src/printer.o
 helloworld_REQUIRES=printerlib
 $(call mk-c-prog-rule,helloworld)
 
