fix: ysr would not walk dependencies correctly

--- a/examples/hello/Makefile
+++ b/examples/hello/Makefile
@@ -24,6 +24,6 @@ helloworld_CFLAGS=-ffast-math
 ### example 3.2: how to define preprocessor constants
 helloworld_DEFINES=VALUE="\"Hello_from_CPP\""
 
-$(call ysr-add-c-prog,helloworld)
+$(call ysr-add-c-console-prog,helloworld)
 
 all: help
